Add support for application suggestions

--- a/libappstream-glib/Makefile.am
+++ b/libappstream-glib/Makefile.am
@@ -85,6 +85,7 @@ libappstream_glib_include_HEADERS =				\
 	as-release.h						\
 	as-screenshot.h						\
 	as-store.h						\
+	as-suggest.h						\
 	as-tag.h						\
 	as-translation.h					\
 	as-utils.h						\
@@ -130,6 +131,8 @@ libappstream_glib_la_SOURCES =					\
 	as-stemmer.c						\
 	as-stemmer.h						\
 	as-store.c						\
+	as-suggest.c						\
+	as-suggest-private.h					\
 	as-tag.c						\
 	as-translation.c					\
 	as-translation-private.h				\
@@ -221,6 +224,8 @@ introspection_sources =						\
 	as-screenshot.h						\
 	as-store.c						\
 	as-store.h						\
+	as-suggest.c						\
+	as-suggest.h						\
 	as-tag.c						\
 	as-tag.h						\
 	as-translation.c					\
